<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="8dp"
    android:paddingEnd="8dp"
    tools:context=".ui.detail.DetailFragment"
    tools:ignore="InconsistentLayout">

    <Button
        android:id="@+id/btn_detail_back"
        android:layout_width="wrap_content"
        android:layout_height="?android:listPreferredItemHeight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:text="@string/detail_frag_btn_back" />

    <com.google.android.exoplayer2.ui.PlayerView
        android:id="@+id/detail_exoplayer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="h,16:9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_detail_back" />

    <TextView
        android:id="@+id/tv_detail_step_instructions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@+id/detail_exoplayer"
        app:layout_constraintStart_toStartOf="@+id/detail_exoplayer"
        app:layout_constraintEnd_toEndOf="@+id/detail_exoplayer"
        app:layout_constraintBottom_toTopOf="@+id/btn_detail_next"
        app:layout_constraintVertical_bias="0.35"
        android:textAlignment="center"
        android:textStyle="italic"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        tools:text="@string/longest_instruction" />

    <Button
        android:id="@+id/btn_detail_next"
        android:layout_width="0dp"
        android:layout_height="?android:listPreferredItemHeight"
        app:layout_constraintStart_toEndOf="@+id/btn_detail_previous"
        app:layout_constraintEnd_toEndOf="@+id/detail_exoplayer"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:text="@string/detail_frag_btn_next" />

    <Button
        android:id="@+id/btn_detail_previous"
        android:layout_width="0dp"
        android:layout_height="?android:listPreferredItemHeight"
        app:layout_constraintStart_toStartOf="@+id/detail_exoplayer"
        app:layout_constraintEnd_toStartOf="@+id/btn_detail_next"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:text="@string/detail_frag_btn_previous" />

</android.support.constraint.ConstraintLayout>