<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.detail.DetailActivity">

    <Button
        android:id="@+id/btn_detail_swap_steps_ingredients"
        android:layout_width="wrap_content"
        android:layout_height="?android:listPreferredItemHeight"
        android:layout_gravity="center_horizontal"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:text="@string/master_frag_btn_default_text" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_master_fragment_steps"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/list_item_master" />

</LinearLayout>