...
    <string name="detail_frag_btn_back">Back to steps</string>
    <string name="detail_frag_intro_text">Choose a step to the left to begin</string>
    <string name="detail_frag_exoplayer_previous_content_desc">Previous</string>
    <string name="detail_frag_exoplayer_play_content_desc">Play</string>
    <string name="detail_frag_exoplayer_pause_content_desc">Pause</string>
    <string name="master_frag_btn_default_text">Show ingredients</string>
    <string name="master_frag_btn_show_steps">Show steps</string>
    <string name="master_frag_btn_show_ingredients">Show ingredients</string>
    <string name="master_frag_btn_enter_fullscreen">Enter fullscreen</string>
    <string name="master_frag_recipe_thumb_content_desc">Recipe thumbnail</string>
    <string name="master_frag_list_item_step_num">Step %d</string>

</resources>

